# simd-1brc

./: .gitignore  Cargo.toml  README.md
data/: sample16kb.txt  test100b.txt
src/: fastmap.rs  fastqueue.rs  main.rs  mmap.rs  workset.rs
