[package]
name = "simd-1brc"
version = "0.1.0"
edition = "2024"

[features]
default = []
safety_checks = []

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
] }

[profile.release]
debug = true
lto = "fat"
panic = "abort"
